# gutenbach

./: .gitignore  .gitmodules  LICENSE  Makefile  README  TODO
Contents/: distribution.dist
client/: Makefile
debian/: athena-counterlog  changelog  control  control.in  copyright  gutenbach-client.install  gutenbach-queue.init  gutenbach-queue.install  gutenbach-queue.postinst  gutenbach-queue.postrm  gutenbach-remctl.config  gutenbach-remctl.dirs  gutenbach-remctl.init  gutenbach-remctl.install  gutenbach-remctl.postinst  gutenbach-remctl.postrm  gutenbach-remctl.templates  gutenbach-server.config  gutenbach-server.dirs  gutenbach-server.init  gutenbach-server.install  gutenbach-server.postinst  gutenbach-server.postrm  gutenbach-server.preinst  gutenbach-server.prerm  gutenbach-server.templates  gutenbach.config  gutenbach.postinst  rules  sipbmp3-filter  sipbmp3-filter-config.pl  sipbmp3.dirs  sipbmp3.init  sipbmp3.install  sipbmp3.install~  sipbmp3.postinst
gutenbach/: README  (+1 more)
gutenbach-client/: Makefile
gutenbach-itunes-plugin/: INSTALL  README  Send to sipbmp3.applescript  Send to sipbmp3.scpt  Set sipbmp3 volume.applescript  (+8 more)
web/old/remctl-2.14/: LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.w32  NEWS  README  TODO  aclocal.m4  autogen  config.h  config.h.in  config.h.w32  config.status  configure  configure.ac  configure.bat  libtool  remctl.spec
web/old/remctl-2.14/client/: api.c  api.lo  client-v1.c  client-v1.lo  client-v2.c  client-v2.lo  error.c  error.lo  internal.h  libremctl.la  libremctl.rc  mapfile  open.c  open.lo  remctl  remctl.c  remctl.h  remctl.rc
web/old/remctl-2.14/client/.deps/: api.Plo  client-v1.Plo  client-v2.Plo  error.Plo  open.Plo  remctl.Po
web/old/remctl-2.14/client/.libs/: libremctl.la  libremctl.lai  libremctl.so.1.0.2  remctl
web/old/remctl-2.14/docs/: design.html  extending  protocol-v3  protocol.html  protocol.txt  protocol.xml  remctl.1  remctl.pod  remctld.8  remctld.8.in  remctld.pod
web/old/remctl-2.14/docs/api/: remctl.3  remctl.pod  remctl_close.3  remctl_close.pod  remctl_command.3  remctl_command.pod  remctl_error.3  remctl_error.pod  remctl_new.3  remctl_new.pod  remctl_open.3  remctl_open.pod  remctl_output.3  remctl_output.pod
web/old/remctl-2.14/examples/: remctl.conf  rsh-wrapper  xinetd
web/old/remctl-2.14/java/: .project  Makefile  README  bcsKeytab.conf  build.xml  build.xml.in  gss_jaas.conf  j3.conf  k5.conf  local.properties  local.properties.in  t5.java  t7.java
web/old/remctl-2.14/java/org/eyrie/eagle/remctl/: Remctl.java  RemctlClient.java  RemctlServer.java
web/old/remctl-2.14/m4/: gput.m4  gssapi.m4  inet-ntoa.m4  lib-depends.m4  lib-pathname.m4  snprintf.m4  socket.m4  vamacros.m4
web/old/remctl-2.14/perl/: Makefile.PL.in  Remctl.pm.in  Remctl.xs  typemap
web/old/remctl-2.14/perl/t/: api.t.in  pod.t  stanford-netdb.t
web/old/remctl-2.14/php/: README  config.m4.in  php_remctl.c  php_remctl.h.in  test-wrapper
web/old/remctl-2.14/php/tests/: 001.phpt  002.phpt  003.phpt
web/old/remctl-2.14/portable/: asprintf.c  daemon.c  dummy.c  dummy.lo  getaddrinfo.c  getaddrinfo.h  getnameinfo.c  getnameinfo.h  getopt.c  getopt.h  gssapi-mech.c  gssapi.h  inet_aton.c  inet_ntoa.c  inet_ntop.c  libportable.la  macros.h  setenv.c  snprintf.c  socket.h  stdbool.h  strlcat.c  strlcat.lo  strlcpy.c  strlcpy.lo  system.h  uio.h  winsock.c
web/old/remctl-2.14/portable/.deps/: dummy.Plo  strlcat.Plo  strlcpy.Plo
web/old/remctl-2.14/portable/.libs/: libportable.la
web/old/remctl-2.14/python/: MANIFEST.in  README  _remctlmodule.c  remctl.py.in  setup.py  setup.py.in  test_remctl.py  test_remctl.py.in
web/old/remctl-2.14/server/: commands.c  config.c  generic.c  internal.h  logging.c  remctld  remctld.c  server-v1.c  server-v2.c
web/old/remctl-2.14/server/.deps/: server_remctld-commands.Po  server_remctld-config.Po  server_remctld-generic.Po  server_remctld-logging.Po  server_remctld-remctld.Po  server_remctld-server-v1.Po  server_remctld-server-v2.Po
web/old/remctl-2.14/tests/: TESTS  runtests.c
web/old/remctl-2.14/tests/client/: api-t.c  large-t.c  open-t.c  remctl-t
web/old/remctl-2.14/tests/data/: README  acl-bad-include  acl-bad-syntax  acl-nonexistant  acl-recursive  acl-simple  acl-too-long  acl-valid-3  cmd-argv  cmd-background.c  cmd-closed.c  cmd-env  cmd-status  cmd-stdin.c  cmd-streaming.c  conf-simple  conf-test  gput
web/old/remctl-2.14/tests/data/acls/: VALID_09  val#id  val.id  valid  valid-2  val~id
web/old/remctl-2.14/tests/data/acls2/: valid-4
web/old/remctl-2.14/tests/data/configs/: bad-logmask-1  bad-logmask-2  bad-logmask-3  bad-logmask-4  bad-option-1
web/old/remctl-2.14/tests/docs/: pod-spelling-t  pod-t
web/old/remctl-2.14/tests/portable/: asprintf-t.c  daemon-t.c  daemon.c  getaddrinfo-t.c  getaddrinfo.c  getnameinfo-t.c  getnameinfo.c  getopt-t.c  getopt.c  inet_aton-t.c  inet_aton.c  inet_ntoa-t.c  inet_ntoa.c  inet_ntop-t.c  inet_ntop.c  setenv-t.c  setenv.c  snprintf-t.c  snprintf.c  strlcat-t.c  strlcat.c  strlcpy-t.c  strlcpy.c
web/old/remctl-2.14/tests/server/: accept-t.c  acl-t.c  config-t.c  continue-t.c  env-t.c  errors-t.c  invalid-t.c  logging-t.c  misc-t  stdin-t.c  streaming-t.c  version-t.c
web/old/remctl-2.14/tests/tap/: basic.c  basic.h  kerberos.h  kerberos.sh  kinit.c  libtap.sh  messages.c  messages.h  remctl.c  remctl.h  remctl.sh
web/old/remctl-2.14/tests/util/: concat-t.c  faketoken.c  fakewrite.c  fdflag-t.c  gss-tokens-t.c  gss-tokens.c  messages-t.c  network-t.c  tokens-t.c  vector-t.c  xmalloc-t  xmalloc.c  xwrite-t.c  xwrite.c
web/old/remctl-2.14/util/: concat.c  concat.lo  fdflag.c  fdflag.lo  gss-errors.c  gss-errors.lo  gss-tokens.c  gss-tokens.lo  libutil.la  messages-die.c  messages-die.lo  messages.c  messages.lo  network.c  network.lo  tokens.c  tokens.lo  util.h  vector.c  vector.lo  xmalloc.c  xmalloc.lo  xwrite.c  xwrite.lo
web/old/remctl-2.14/util/.deps/: concat.Plo  fdflag.Plo  gss-errors.Plo  gss-tokens.Plo  messages-die.Plo  messages.Plo  network.Plo  tokens.Plo  vector.Plo  xmalloc.Plo  xwrite.Plo
(+318 files in other folders)
